objects/DMAPP__DM_Insight_Map_Node_Parent__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing parts of the Insight Maps associated with Opportunities</description>
    <fields>
        <fullName>DMAPP__ChildNode__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Insight Map Child Node</label>
        <referenceTo>DMAPP__DM_Collaboration_Map_Node__c</referenceTo>
        <relationshipName>InsightMapParents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Insight_Map__c</fullName>
        <label>DM Insight Map</label>
        <referenceTo>DMAPP__DM_Collaboration_Map__c</referenceTo>
        <relationshipName>DM_Insight_Map_Node_Parents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__ParentNode__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Insight Map Parent Node</label>
        <referenceTo>DMAPP__DM_Collaboration_Map_Node__c</referenceTo>
        <relationshipName>InsightMapChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Insight Map Node Parent</label>
    <nameField>
        <label>DM Insight Map Node Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Insight Map Node Parents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>